# rpcbench

./: CMakeLists.txt  README.md  README.txt
async_capnp/: CMakeLists.txt  CapnpClient.cpp  CapnpServer.cpp  benchmark.txt
capnp/: CMakeLists.txt  CapnpClient.cpp  bench.capnproto
thrift/: CMakeLists.txt  ThriftClient.cpp  ThriftServer.cpp  bench.thrift
